--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 # Folders
 _obj
 _test
+google-cloud-sdk/
 
 # Architecture specific extensions/prefixes
 *.[568vq]
@@ -109,3 +110,4 @@ node_modules/
 tmp
 
 /vendor
+google-cloud-cli-394.0.0-linux-x86_64.tar.gz
