gcloud in gp yml

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -14,8 +14,11 @@ tasks:
     init: pyenv install 3.11
     command: pyenv global 3.11
   - name: Install gcloud
-    init: curl -O https://dl.google.com/dl/cloudsdk/channels/rapid/downloads/google-cloud-cli-394.0.0-linux-x86_64.tar.gz
-    command: tar -xf google-cloud-cli-394.0.0-linux-x86_64.tar.gz && CLOUDSDK_CORE_DISABLE_PROMPTS=1 ./google-cloud-sdk/install.sh
-
+    init: curl -O https://dl.google.com/dl/cloudsdk/channels/rapid/downloads/google-cloud-cli-454.0.0-linux-x86_64.tar.gz
+    command: |
+      tar -xf google-cloud-cli-394.0.0-linux-x86_64.tar.gz 
+      ./google-cloud-sdk/install.sh -q
+  - name: Update environ vars
+    command: export GOOGLE_APPLICATION_CREDENCTIALS="./service_account.json"
 
 
