--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -7,18 +7,16 @@
 tasks:
   - init: go get && go build ./... && go test ./...
     command: go run .
-  - name: Script Task
-    # init: echo 'init script' # runs during prebuild => https://www.gitpod.io/docs/configure/projects/prebuilds
-    command: echo 'start script'
   - name: Install Py 3.11 (pre-req for gcloud install)
     init: pyenv install 3.11
     command: pyenv global 3.11
   - name: Install gcloud
     init: curl -O https://dl.google.com/dl/cloudsdk/channels/rapid/downloads/google-cloud-cli-454.0.0-linux-x86_64.tar.gz
     command: |
-      tar -xf google-cloud-cli-394.0.0-linux-x86_64.tar.gz 
+      tar -xf google-cloud-cli-454.0.0-linux-x86_64.tar.gz 
       ./google-cloud-sdk/install.sh -q
+      source ./google-cloud-sdk/path.bash.inc
   - name: Update environ vars
-    command: export GOOGLE_APPLICATION_CREDENCTIALS="./service_account.json"
+    command: export GOOGLE_APPLICATION_CREDENTIALS="./service_account.json"
 
 
