--- a/.gitignore
+++ b/.gitignore
@@ -113,3 +113,4 @@ tmp
 google-cloud-cli-394.0.0-linux-x86_64.tar.gz
 google-cloud-cli-454.0.0-linux-x86_64.tar.gz
 .service_account.json
+.service_account0.json
