--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     ports:
       - '8080:8080'
     environment:
-      GOOGLE_APPLICATION_CREDENTIALS: service_account.json
+      GOOGLE_APPLICATION_CREDENTIALS: .service_account.json
   subscriber:
     build:
       args:
@@ -18,4 +18,4 @@ services:
       context: .
       dockerfile: ./build/Dockerfile
     environment:
-      GOOGLE_APPLICATION_CREDENTIALS: service_account.json
+      GOOGLE_APPLICATION_CREDENTIALS: .service_account.json
